k8s/04-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: ticketing
  labels: { app: postgres }
spec:
  replicas: 1
  strategy:
    type: Recreate        # baza ima jedan PVC (RWO) -> ne smije rolling 2 poda
  selector:
    matchLabels: { app: postgres }
  template:
    metadata:
      labels: { app: postgres }
    spec:
      serviceAccountName: ticketing-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 999          # 'postgres' korisnik u sluzbenoj slici
        fsGroup: 999            # da pod moze pisati u PVC
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
            - name: init
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
          readinessProbe:
            exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"] }
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec: { command: ["sh","-c","pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"] }
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests: { cpu: "100m", memory: "128Mi" }
            limits:   { cpu: "500m", memory: "256Mi" }
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }
      volumes:
        - name: data
          persistentVolumeClaim: { claimName: postgres-pvc }
        - name: init
          configMap: { name: postgres-init }
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ticketing
spec:
  selector: { app: postgres }
  ports:
    - port: 5432
      targetPort: 5432
