k8s/05-redis.yaml
# Redis - queue/cache, probe, resursi, non-root
# Autor: Lovro Siprak
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ticketing
  labels: { app: redis }
spec:
  replicas: 1
  selector:
    matchLabels: { app: redis }
  template:
    metadata:
      labels: { app: redis }
    spec:
      serviceAccountName: ticketing-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 999          # 'redis' korisnik u sluzbenoj slici
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: redis
          image: redis:7-alpine
          args: ["redis-server","--save","","--appendonly","no"]
          ports:
            - containerPort: 6379
          readinessProbe:
            exec: { command: ["redis-cli","ping"] }
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            exec: { command: ["redis-cli","ping"] }
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits:   { cpu: "250m", memory: "128Mi" }
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: { drop: ["ALL"] }
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: ticketing
spec:
  selector: { app: redis }
  ports:
    - port: 6379
      targetPort: 6379
